[project]
name = "ApexRL"
version = "0.0.1"
description = "A Reinforcement Learning lib"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "Atticli", email = "Atticlmr@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "src"}  
include-package-data = true
zip-safe = false            