[project]
name = "apexrl"
version = "0.2.1"
description = "A Reinforcement Learning lib"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "Atticli", email = "Atticlmr@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "gymnasium>=0.29.0",
    "tensordict>=0.6.0,<0.12.2",
    "tensorboard>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]
test = [
    "pytest",
    "pytest-cov",
]
wandb = [
    "wandb>=0.18.0",
]
swanlab = [
    "swanlab>=0.5.0",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "src"}  
include-package-data = true
zip-safe = false            
